# Electricity-Plan-Analyzer-LLM-Enhanced-Data-Extraction-and-Visualization-System

./: hello.py  pyproject.toml
data_processing/: .env.example  README.md  agentstack.json  plans.csv  pyproject.toml  visualize.py
data_processing/None/: energy_plans.csv
data_processing/db/: chroma.sqlite3
data_processing/output/: TXUplans.csv  energy_plans.csv  groundtruth.csv  plans.csv  plans3,3,3.csv  plansDiff.csv
data_processing/src/: crew.py  main.py
data_processing/src/config/: agents.yaml  tasks copy.yaml  tasks.yaml
data_processing/src/files/: efl1.docx
data_processing/src/tools/: __init__.py  composio_tool.py  file_reader.py
