[tool.poetry]
name = "data_processing"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = ["Name <Email>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version="0.2.3"}
firecrawl-py = "^1.9.0"
composio-crewai = "^0.6.13"
